--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,9 @@ p {
   margin-bottom: 0;
 }
 .container {
-  width: 1158px;
-  padding: 0 15px 0 15px;
+  max-width: 320px;
+  padding-right: 16px;
+  padding-left: 16px;
   margin: 0 auto;
 }
 
@@ -143,10 +144,11 @@ p {
 .hero {
   background-color: #2e2f42;
   display: flex;
-  height: 600px;
+  padding: 72px 0;
+  /* height: 600px;
   padding: 188px 0;
+  max-width: 1440px; */
   flex-shrink: 0;
-  max-width: 1440px;
   background-image: linear-gradient(
       to bottom,
       rgba(46, 47, 66, 0.7),
@@ -164,15 +166,16 @@ p {
   color: #fff;
   text-align: center;
   font-family: Roboto;
-  font-size: 56px;
+  font-size: 36px;
   font-style: normal;
   font-weight: 700;
   line-height: 1.07; /* 107.143% */
   letter-spacing: 0.02em;
-  max-width: 496px;
-  height: 120px;
+  text-transform: capitalize;
+  /* max-width: 496px; */
+  /* height: 120px; */
   margin: 0 auto;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
 }
 .hero-button {
   cursor: pointer;
@@ -200,7 +203,7 @@ p {
 /*========================================================*/
 
 .section-second {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 .visually-hidden {
   position: absolute;
@@ -218,16 +221,17 @@ p {
 
 .qualities-list {
   display: flex;
-  gap: 24px;
+  gap: 72px;
+  flex-wrap: wrap;
 }
 .qualities-item {
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
   flex-direction: column;
 }
 .con-icons-sec-sec {
   width: 264px;
   height: 112px;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   margin-bottom: 8px;
@@ -243,7 +247,7 @@ p {
 .qualities-title {
   color: #2e2f42;
   font-family: Roboto;
-  font-size: 20px;
+  font-size: 36px;
   font-style: normal;
   font-weight: 500;
   line-height: 1.2; /* 120% */
@@ -255,7 +259,7 @@ p {
   font-family: Roboto;
   font-size: 16px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
 }
@@ -264,7 +268,7 @@ p {
 
 .team {
   background: #f4f4fd;
-  padding: 120px 0;
+  padding: 96px 12px;
 }
 .team-title {
   color: #2e2f42;
@@ -281,14 +285,15 @@ p {
 }
 .team-list {
   display: flex;
-  gap: 24px;
+  gap: 72px;
+  flex-wrap: wrap;
 }
 .con-team-person {
   padding: 32px 0;
 }
 .team-people {
   background-color: #ffffff;
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
   border-radius: 0px 0px 4px 4px;
   background-color: #fff;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
@@ -353,7 +358,7 @@ p {
 
 .portfolio {
   background-color: white;
-  padding: 120px 0;
+  padding: 96px 0;
 }
 .portfolio-title {
   color: #2e2f42;
@@ -371,10 +376,10 @@ p {
   background-color: white;
   display: flex;
   flex-wrap: wrap;
-  gap: 48px 24px;
+  gap: 48px;
 }
 .portfolio-item {
-  width: calc((100% - 48px) / 3);
+  /* width: calc((100% - 48px) / 3); */
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover,
@@ -435,21 +440,32 @@ p {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
 }
+.portfolio-img {
+  width: 288px;
+  height: 280px;
+}
 
 /*============================================*/
 
 .footer {
   background-color: #2e2f42;
-  padding: 100px 0;
+  /* padding: 100px 0; */
+  padding: 97px 0;
 }
-
+.footer-logo-mob {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .footer-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
 }
 
 .footer-logo-container {
-  margin-right: 120px;
+  /* margin-right: 120px; */
+  margin-bottom: 72px;
 }
 
 .footer-logo {
@@ -461,7 +477,7 @@ p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   display: inline-block;
-  margin-bottom: 16px;
+  margin-bottom: 17.5px;
 }
 
 .span {
@@ -474,11 +490,16 @@ p {
   color: #f4f4fd;
   letter-spacing: 0.02em;
   max-width: 264px;
-  margin-bottom: 16px;
   width: 264px;
   height: 72px;
 }
-
+.social-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 72px;
+}
 .social-text {
   font-weight: 500;
   font-size: 16px;
@@ -491,7 +512,6 @@ p {
 .footer-list {
   display: flex;
   gap: 16px;
-  margin-right: 80px;
 }
 
 .footer-item {
@@ -529,10 +549,15 @@ p {
   letter-spacing: 0.02em;
   color: #fff;
   margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
 }
 .footer-form {
   display: flex;
   gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 .footer-label {
 }
@@ -826,4 +851,122 @@ p {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+}
+
+@media screen and (min-width: 320px) {
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  .hero {
+    padding: 112px 0;
+  }
+  .hero-title {
+    margin-bottom: 36px;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 56px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.07; /* 107.143% */
+    letter-spacing: 0.02em;
+    width: 496px;
+    height: 120px;
+    text-transform: none;
+  }
+  .qualities-list {
+    gap: 72px 24px;
+  }
+  .qualities-item {
+    width: calc((100% - 24px) / 2);
+  }
+  .team-container {
+    padding: 0 96px;
+  }
+  .team-list {
+    gap: 64px 24px;
+    margin: 0 auto;
+  }
+  .portfolio-img {
+    width: 356px;
+    height: 300px;
+  }
+  .portfolio-list {
+    gap: 72px 24px;
+  }
+  .footer {
+  }
+  .social-list {
+    display: block;
+  }
+  .footer-form-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0 22px;
+  }
+  .footer-container {
+    justify-content: center;
+  }
+  .footer-logo-mob {
+    display: block;
+  }
+  .footer-form-text {
+    display: block;
+  }
+  .footer-logo-container {
+    margin-right: 24px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .section-second {
+    padding: 120px 0;
+  }
+  .qualities-list {
+    gap: 24px;
+  }
+  .qualities-item {
+    width: calc((100% - 72px) / 4);
+  }
+  .con-icons-sec-sec {
+    display: flex;
+  }
+  .qualities-title {
+    font-size: 20px;
+  }
+  .qualities-link {
+    font-weight: 400;
+  }
+  .team-container {
+  }
+  .team-list {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+  .portfolio {
+    padding: 120px 0;
+  }
+  .portfolio-list {
+    gap: 48px 24px;
+  }
+  .portfolio-img {
+    width: 360px;
+    height: 300px;
+  }
+  .footer {
+    padding: 100px 0;
+  }
+  .footer-logo-container {
+    margin-right: 120px;
+    margin-bottom: 0;
+  }
+  .social-list {
+    margin-right: 80px;
+    margin-bottom: 0;
+  }
 }
