--- a/css/styles.css
+++ b/css/styles.css
@@ -145,9 +145,6 @@ p {
   background-color: #2e2f42;
   display: flex;
   padding: 72px 0;
-  /* height: 600px;
-  padding: 188px 0;
-  max-width: 1440px; */
   flex-shrink: 0;
   background-image: linear-gradient(
       to bottom,
@@ -900,11 +897,6 @@ p {
   .social-list {
     display: block;
   }
-  .footer-form-container {
-    display: flex;
-    flex-direction: column;
-    padding: 0 22px;
-  }
   .footer-container {
     justify-content: center;
   }
@@ -923,6 +915,12 @@ p {
     max-width: 1158px;
     padding-right: 15px;
     padding-left: 15px;
+  }
+  .hero {
+    padding: 188px 0;
+  }
+  .hero-title {
+    margin-bottom: 48px;
   }
   .section-second {
     padding: 120px 0;
