--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ a {
 }
 img {
   display: block;
+  width: 100%;
 }
 h1,
 h2,
@@ -36,11 +37,14 @@ p {
 /*============================================================*/
 
 .header {
-  border-bottom: 1px solid #e7e9fc;
+  /* border-bottom: 1px solid #e7e9fc;
   background-color: #fff;
   padding: 24px 0;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); */
+}
+.tab-norm-header {
+  display: none;
 }
 .header .container {
   display: flex;
@@ -86,7 +90,7 @@ p {
   font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
-  padding: 24px 0;
+  padding-bottom: 24px;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -110,16 +114,15 @@ p {
   left: 0;
   bottom: -1px;
 }
-
 .header-adress-link {
   color: #434455;
-  /* Body */
   font-family: Roboto;
-  font-size: 16px;
+  font-family: Roboto;
+  font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5; /* 150% */
-  letter-spacing: 0.02em;
+  line-height: 1.17; /* 116.667% */
+  letter-spacing: 0.04em;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -138,7 +141,62 @@ p {
   display: flex;
   gap: 40px;
 }
-
+.header-mob {
+  height: 56px;
+  padding: 17.5px 16px;
+  border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
+  background: var(--WHITE, #fff);
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-nav-mob {
+  color: #4d5ae5;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.17; /* 116.667% */
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.header-nav-logo-mob {
+  color: #2e2f42;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.17; /* 116.667% */
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.menu-open-btn {
+  fill: #2f2f37;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 24px;
+  height: 24px;
+}
+.menu-open-btn:active {
+  background: var(--OCEAN, #404bbf);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.menu-open-btn:hover,
+.menu-open-btn:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
+}
+.menu-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 /*=========================================================*/
 
 .hero {
@@ -151,7 +209,7 @@ p {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/mob-version.jpg);
 
   background-repeat: no-repeat;
   background-size: cover;
@@ -169,8 +227,6 @@ p {
   line-height: 1.07; /* 107.143% */
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  /* max-width: 496px; */
-  /* height: 120px; */
   margin: 0 auto;
   margin-bottom: 72px;
 }
@@ -222,7 +278,6 @@ p {
   flex-wrap: wrap;
 }
 .qualities-item {
-  /* width: calc((100% - 72px) / 4); */
   flex-direction: column;
 }
 .con-icons-sec-sec {
@@ -290,7 +345,6 @@ p {
 }
 .team-people {
   background-color: #ffffff;
-  /* width: calc((100% - 72px) / 4); */
   border-radius: 0px 0px 4px 4px;
   background-color: #fff;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
@@ -376,7 +430,6 @@ p {
   gap: 48px;
 }
 .portfolio-item {
-  /* width: calc((100% - 48px) / 3); */
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover,
@@ -446,7 +499,6 @@ p {
 
 .footer {
   background-color: #2e2f42;
-  /* padding: 100px 0; */
   padding: 97px 0;
 }
 .footer-logo-mob {
@@ -588,7 +640,6 @@ p {
   color: #fff;
   text-align: center;
   cursor: pointer;
-  /* Button Text */
   font-family: Roboto, sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -625,15 +676,15 @@ p {
   pointer-events: none;
 }
 .modal {
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  height: 623px;
   background-color: #fcfcfc;
   border-radius: 4px;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  padding: 72px 24px 24px 24px;
+  padding: 72px 16px 24px 16px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -677,21 +728,14 @@ p {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
-  width: 360px;
-  height: 24px;
   margin-bottom: 16px;
 }
 .modal-form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 360px;
-  max-height: 336px;
 }
-.modal-inputs {
-  width: 360px;
-  max-height: 336px;
-}
+
 .modal-field {
   display: block;
   margin-bottom: 8px;
@@ -713,7 +757,7 @@ p {
   position: relative;
 }
 .modal-input {
-  width: 360px;
+  width: 256px;
   height: 40px;
   background-color: inherit;
   border-radius: 4px;
@@ -749,7 +793,7 @@ p {
   margin-bottom: 4px;
 }
 .modal-textarea {
-  width: 360px;
+  width: 256px;
   height: 120px;
   font-size: 12px;
   line-height: 1.17;
@@ -856,7 +900,38 @@ p {
   .container {
     max-width: 768px;
   }
+
+  .header-mob {
+    display: none;
+  }
+  .tab-norm-header {
+    display: flex;
+    padding: 14px 0;
+  }
+  .header-adress-item {
+    width: 119px;
+    height: 14px;
+  }
+  .header-adress-item-mail {
+    margin-bottom: 12px;
+  }
+  .adress-list {
+    display: block;
+  }
+  .header-list {
+    margin-right: 121px;
+  }
+  .header-nav-logo {
+    margin-right: 120px;
+  }
+
   .hero {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/tablet-version.jpg);
     padding: 112px 0;
   }
   .hero-title {
@@ -909,6 +984,19 @@ p {
   .footer-logo-container {
     margin-right: 24px;
   }
+  .modal {
+    width: 408px;
+    height: 584px;
+    padding: 72px 25px 24px 23px;
+  }
+  .modal-input {
+    width: 360px;
+    height: 40px;
+  }
+  .modal-textarea {
+    width: 360px;
+    height: 120px;
+  }
 }
 @media screen and (min-width: 1158px) {
   .container {
@@ -916,7 +1004,53 @@ p {
     padding-right: 15px;
     padding-left: 15px;
   }
+  .header {
+    border-bottom: 1px solid #e7e9fc;
+    background-color: #fff;
+    padding: 24px 0;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  }
+  .tab-norm-header {
+    padding: 0;
+  }
+  .header-list {
+    margin-right: 332px;
+  }
+  .header-nav-logo {
+    margin-right: 76px;
+  }
+  .header-adress-item {
+    width: 153px;
+    height: 24px;
+  }
+  .header-adress-link {
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5; /* 150% */
+    letter-spacing: 0.02em;
+  }
+  .header-adress-item-mail {
+    margin: 0;
+  }
+  .header-list {
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+  }
+  .adress-list {
+    display: flex;
+    gap: 40px;
+  }
   .hero {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
     padding: 188px 0;
   }
   .hero-title {
@@ -966,5 +1100,8 @@ p {
   .social-list {
     margin-right: 80px;
     margin-bottom: 0;
+  }
+  .modal {
+    padding: 72px 24px 24px 24px;
   }
 }
