--- a/css/styles.css
+++ b/css/styles.css
@@ -77,10 +77,49 @@ p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+.header-modal {
+}
+.backdrop-mob {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2e2f42b2;
+  top: 0;
+  left: 0;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal-mob {
+  width: 320px;
+  height: 640px;
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 72px 24px 40px 16px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .header-list {
   display: flex;
   align-items: flex-start;
+  gap: 30px;
+}
+.header-list-mob {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
   gap: 40px;
+  margin-bottom: 168px;
 }
 .header-link {
   color: #2e2f42;
@@ -94,6 +133,25 @@ p {
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.current-mob {
+  color: #404bbf;
+}
+.header-link-mob {
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.11; /* 111.111% */
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-link-mob:hover,
+.header-link-mob:focus {
+  color: #404bbf;
 }
 .header-link:hover,
 .header-link:focus {
@@ -140,6 +198,35 @@ p {
 .adress-list {
   display: flex;
   gap: 40px;
+}
+.adress-list-mob {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-bottom: 48px;
+}
+.header-adress-item-phone-mob {
+  color: var(--IRIS, #4d5ae5);
+  /* Header 3 */
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2; /* 120% */
+  letter-spacing: 0.02em;
+}
+.header-adress-link-mob {
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2; /* 120% */
+  letter-spacing: 0.02em;
+}
+.header-adress-link-mob:hover,
+.header-adress-link-mob:focus {
+  text-decoration: underline;
+  color: #404bbf;
 }
 .header-mob {
   height: 56px;
@@ -197,6 +284,34 @@ p {
 .menu-btn-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.header-list-social {
+  display: flex;
+  gap: 40px;
+  width: 280px;
+  height: 40px;
+}
+.header-item-social {
+  width: 40px;
+  height: 40px;
+}
+.header-link-social {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-icon-social {
+  fill: #f4f4fd;
+}
+.header-link-social:hover,
+.header-link-social:focus {
+  background-color: #404bbf;
+}
+
 /*=========================================================*/
 
 .hero {
@@ -907,6 +1022,9 @@ p {
   .tab-norm-header {
     display: flex;
     padding: 14px 0;
+  }
+  .current::after {
+    display: block;
   }
   .header-adress-item {
     width: 119px;
