--- a/css/styles.css
+++ b/css/styles.css
@@ -96,8 +96,8 @@ p {
   pointer-events: none;
 }
 .modal-mob {
-  width: 320px;
-  height: 640px;
+  width: 100%;
+  height: 100%;
   background-color: #fcfcfc;
   border-radius: 4px;
   position: absolute;
@@ -108,6 +108,8 @@ p {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  flex-direction: column;
 }
 .header-list {
   display: flex;
@@ -119,7 +121,7 @@ p {
   align-items: flex-start;
   flex-direction: column;
   gap: 40px;
-  margin-bottom: 168px;
+  margin-bottom: auto;
 }
 .header-link {
   color: #2e2f42;
@@ -316,7 +318,6 @@ p {
 
 .hero {
   background-color: #2e2f42;
-  display: flex;
   padding: 72px 0;
   flex-shrink: 0;
   background-image: linear-gradient(
@@ -331,7 +332,18 @@ p {
   background-position: center;
   margin: 0 auto;
 }
-
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/mob@x2.png);
+  }
+}
 .hero-title {
   color: #fff;
   text-align: center;
@@ -416,10 +428,11 @@ p {
   font-family: Roboto;
   font-size: 36px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 1.2; /* 120% */
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  text-align: center;
 }
 .qualities-link {
   color: #434455;
@@ -435,7 +448,7 @@ p {
 
 .team {
   background: #f4f4fd;
-  padding: 96px 12px;
+  padding: 96px 0;
 }
 .team-title {
   color: #2e2f42;
@@ -454,6 +467,7 @@ p {
   display: flex;
   gap: 72px;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .con-team-person {
   padding: 32px 0;
@@ -624,7 +638,7 @@ p {
 .footer-container {
   display: flex;
   flex-wrap: wrap;
-  align-items: baseline;
+  justify-content: center;
 }
 
 .footer-logo-container {
@@ -640,8 +654,9 @@ p {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  display: inline-block;
+  display: block;
   margin-bottom: 17.5px;
+  text-align: center;
 }
 
 .span {
@@ -1052,6 +1067,18 @@ p {
       url(../images/tablet-version.jpg);
     padding: 112px 0;
   }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/tablet@x2.png);
+    }
+  }
   .hero-title {
     margin-bottom: 36px;
     text-align: center;
@@ -1070,6 +1097,9 @@ p {
   }
   .qualities-item {
     width: calc((100% - 24px) / 2);
+  }
+  .qualities-title {
+    text-align: start;
   }
   .team-container {
     padding: 0 96px;
@@ -1091,10 +1121,14 @@ p {
     display: block;
   }
   .footer-container {
-    justify-content: center;
+    justify-content: start;
+    max-width: 550px;
   }
   .footer-logo-mob {
     display: block;
+  }
+  .footer-logo {
+    text-align: start;
   }
   .footer-form-text {
     display: block;
@@ -1170,6 +1204,19 @@ p {
       ),
       url(../images/people-office.jpg);
     padding: 188px 0;
+    max-width: 1440px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/desktop@x2.png);
+    }
   }
   .hero-title {
     margin-bottom: 48px;
