--- a/css/styles.css
+++ b/css/styles.css
@@ -1066,6 +1066,7 @@ p {
       ),
       url(../images/tablet-version.jpg);
     padding: 112px 0;
+    margin: 0 auto;
   }
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
